# ladybird

./: EXTENSION_IMPLEMENTATION_SUMMARY.md  test-chrome-extensions.sh  test-mozilla-extensions.sh
.cursor/: CURSOR_RULES_SUMMARY.md
.cursor/rules/: README.mdc  coding-style.mdc  contribution-guidelines.mdc  cpp-patterns.mdc  error-handling.mdc  libweb-patterns.mdc  project-overview.mdc  smart-pointers.mdc
Libraries/LibCore/: MachPort.cpp
Libraries/LibCore/Platform/: ProcessStatisticsMach.cpp
Libraries/LibGfx/: PathSkia.cpp  TextLayout.cpp
Libraries/LibGfx/Font/: Typeface.cpp
Libraries/LibJS/Runtime/: Value.cpp
Libraries/LibLine/: Editor.cpp
Libraries/LibMedia/: PlaybackManager.cpp  PlaybackManager.h
Libraries/LibMedia/Audio/: FFmpegLoader.cpp  FFmpegLoader.h  Loader.cpp  Loader.h
Libraries/LibMedia/FFmpeg/: FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegVideoDecoder.cpp
Libraries/LibWeb/: CMakeLists.txt
Libraries/LibWeb/Editing/: Commands.h  Editor.cpp
Libraries/LibWeb/EncryptedMediaExtensions/: MediaKeys.cpp  (+5 more)
Libraries/LibWeb/Extensions/: CMakeLists.txt  Extension.cpp  Extension.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionManifest.cpp  ExtensionManifest.h
Libraries/LibWeb/Extensions/API/: ChromeWebStore.cpp  ChromeWebStore.h  ExtensionRuntime.cpp  ExtensionRuntime.h  MozillaExtensionRuntime.cpp  MozillaExtensionRuntime.h
Libraries/LibWebView/: AdBlocker.cpp  AdBlocker.h  Application.cpp  CookieJar.cpp  UserAgent.cpp  ViewImplementation.cpp
Meta/: ladybird.py
Services/WebContent/: main.cpp
UI/Qt/: BrowserWindow.cpp  BrowserWindow.h
(+24 files in other folders)
